Fix close button position on popup on mobile

--- a/_sass/components/_popup.scss
+++ b/_sass/components/_popup.scss
@@ -10,7 +10,7 @@
   background-color: $white;
   width: calc(#{$narrow} - 120px);
   max-width: 100%;
-  height: 100vh;
+  height: 100%;
   pointer-events: none;
   box-shadow: 0 0 20px 0 rgba($black, 0.3);
 
@@ -61,6 +61,11 @@
 
     svg {
       pointer-events: none;
+    }
+
+    @include breakpoint(tablet) {
+      top: 20px;
+      right: 20px;
     }
   }
 
